samples/_failures_safe/1761492907_88b4bf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_00ccf85c.c: In function ‘main’:
./samples/SAFE/__tmp_00ccf85c.c:207: error: expected ‘)’ at end of input
./samples/SAFE/__tmp_00ccf85c.c:206:16: note: to match this ‘(’
  206 |         fprintf(stderr
      |                ^
./samples/SAFE/__tmp_00ccf85c.c:206:9: error: too few arguments to function ‘fprintf’
  206 |         fprintf(stderr
      |         ^~~~~~~
In file included from /usr/include/stdio.h:980,
                 from ./samples/SAFE/__tmp_00ccf85c.c:2:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:77:1: note: declared here
   77 | fprintf (FILE *__restrict __stream, const char *__restrict __fmt, ...)
      | ^~~~~~~
./samples/SAFE/__tmp_00ccf85c.c:206:9: error: expected declaration or statement at end of input
  206 |         fprintf(stderr
      |         ^~~~~~~
./samples/SAFE/__tmp_00ccf85c.c:206:9: error: expected declaration or statement at end of input
